Added ms to ALL_LINGUAS. Added Malay Translation by Mohamad Afifi Omar
2002-01-22  Hasbullah Bin Pit <sebol@ikhlas.com>

        * configure.in: Added ms to ALL_LINGUAS.
        * po/ms.po: Added Malay Translation by
          Mohamad Afifi Omar <mr_mohd_afifi@yahoo.com> and me.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-22  Hasbullah Bin Pit <sebol@ikhlas.com>
+
+	* configure.in: Added ms to ALL_LINGUAS.
+	* po/ms.po: Added Malay Translation by
+          Mohamad Afifi Omar <mr_mohd_afifi@yahoo.com> and me.
+
 2002-01-22  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-toc.c: started to rewrite to use GNode-tree
