--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-22  Hasbullah Bin Pit <sebol@ikhlas.com>
+
+	* ms.po: Added Malay Translation by
+	Mohamad Afifi Omar <mr_mohd_afifi@yahoo.com>.
+
 2002-01-22  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
