--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2002-01-22  Alex Larsson  <alexl@redhat.com>
+
+	* src/yelp-man.c (yelp_man_push_initial_tree):
+	Fix silly bug.
+
+	* src/yelp-util.[ch]:
+	Add functions to go between Nodes in the doc tree and
+	string paths.
+
+	* src/yelp-view-toc.c:
+	Update man handling to GNodes.
+
 2002-01-23  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c (yw_history_button_clicked): 
