Added Bulgarian translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-24  Alexander Shopov  <al_shopov@web.bg>
+
+	* configure.in (ALL_LINGUAS): added "bg"
+
 2002-01-23  Alex Larsson  <alexl@redhat.com>
 
 	* src/yelp-scrollkeeper.[ch]:
