--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-24  Alexander Shopov  <al_shopov@web.bg>
+
+	* bg.po: Added Bulgarian trnslation.
+
 2002-01-22  Hasbullah Bin Pit <sebol@ikhlas.com>
 
 	* ms.po: Added Malay Translation by
