--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-25  Szabolcs Ban  <shooby@gnome.hu>
+
+        * po/hu.po: Added Hungarian translations from Emese Kovacs
+        <emese@gnome.hu>
+
 2002-01-24  Alex Larsson  <alexl@redhat.com>
 
         * src/yelp-util.[ch]:
