hopfully added hu.po

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-25  Szabolcs Ban  <shooby@gnome.hu>
+
+        * po/hu.po: Added Hungarian translations from Emese Kovacs
+        <emese@gnome.hu>, cvs troubles solved, sorry for that
+
 Fri Jan 25 12:43:19 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* configure.in: Remove 'hu' from ALL_LINGUAS since
