--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-25  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Added Danish translation.
+
 2002-01-24  Alexander Shopov  <al_shopov@web.bg>
 
 	* bg.po: Added Bulgarian trnslation.
