--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-25  Ole Laursen  <olau@hardworking.dk>
+
+	* configure.in: Added "da" to ALL_LINGUAS.
+
 2002-01-25  Szabolcs Ban  <shooby@gnome.hu>
 
         * po/hu.po: Added Hungarian translations from Emese Kovacs
