--- a/po/hu.po
+++ b/po/hu.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: yelp VERSION\n"
 "POT-Creation-Date: 2002-01-25 13:22+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Emese Kovacs <EMAIL@ADDRESS>\n"
+"Last-Translator: Emese Kovacs <emese@gnome.hu>\n"
 "Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,11 +28,11 @@ msgstr "info"
 #: src/yelp-main.c:77
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "A Yelp aktiválása sikertelen: '%s'"
+msgstr "A Yelp aktivÃ¡lÃ¡sa sikertelen: '%s'"
 
 #: src/yelp-main.c:97
 msgid "Could not open new window."
-msgstr "Ablak nyitása sikertelen."
+msgstr "Ablak nyitÃ¡sa sikertelen."
 
 #: src/yelp-man.c:269 src/yelp-man.c:290 src/yelp-man.c:326 src/yelp-man.c:358
 #: src/yelp-man.c:374 src/yelp-man.c:385
@@ -65,11 +65,11 @@ msgstr "PThreads"
 
 #: src/yelp-man.c:337
 msgid "System Calls"
-msgstr "Rendszerhívások"
+msgstr "RendszerhÃ­vÃ¡sok"
 
 #: src/yelp-man.c:342
 msgid "Library Functions"
-msgstr "Függvények"
+msgstr "FÃ¼ggvÃ©nyek"
 
 #: src/yelp-man.c:347
 msgid "Kernel Routines"
@@ -77,31 +77,31 @@ msgstr "Rendszermag rutinok"
 
 #: src/yelp-man.c:402
 msgid "Applications"
-msgstr "Alkalmazások"
+msgstr "AlkalmazÃ¡sok"
 
 #: src/yelp-man.c:407
 msgid "Development"
-msgstr "Fejlesztés"
+msgstr "FejlesztÃ©s"
 
 #: src/yelp-man.c:412
 msgid "Hardware Devices"
-msgstr "Hardver eszközök"
+msgstr "Hardver eszkÃ¶zÃ¶k"
 
 #: src/yelp-man.c:417
 msgid "Configuration Files"
-msgstr "Konfigurációs fájlok"
+msgstr "KonfigurÃ¡ciÃ³s fÃ¡jlok"
 
 #: src/yelp-man.c:422
 msgid "Games"
-msgstr "Játékok"
+msgstr "JÃ¡tÃ©kok"
 
 #: src/yelp-man.c:427
 msgid "Overviews"
-msgstr "Áttekintõ leírások"
+msgstr "ÃttekintÅ‘ leÃ­rÃ¡sok"
 
 #: src/yelp-man.c:432
 msgid "System Administration"
-msgstr "Rendszeradminisztráció"
+msgstr "RendszeradminisztrÃ¡ciÃ³"
 
 #: src/yelp-man.c:443
 msgid "man"
@@ -113,68 +113,68 @@ msgstr "Fejezet"
 
 #: src/yelp-window.c:111
 msgid "/_File"
-msgstr "/_Fájl"
+msgstr "/_FÃ¡jl"
 
 #: src/yelp-window.c:112
 msgid "/File/_New window"
-msgstr "/Fájl/Új _ablak"
+msgstr "/FÃ¡jl/Ãšj _ablak"
 
 #: src/yelp-window.c:113
 msgid "/File/_Close window"
-msgstr "/Fájl/Ablak _bezárása"
+msgstr "/FÃ¡jl/Ablak _bezÃ¡rÃ¡sa"
 
 #: src/yelp-window.c:114
 msgid "/File/_Quit"
-msgstr "/File/_Kilépés"
+msgstr "/File/_KilÃ©pÃ©s"
 
 #: src/yelp-window.c:115
 msgid "/_Help"
-msgstr "/_Súgó"
+msgstr "/_SÃºgÃ³"
 
 #: src/yelp-window.c:116
 msgid "/Help/_About"
-msgstr "/Súgó/_Névjegy"
+msgstr "/SÃºgÃ³/_NÃ©vjegy"
 
 #: src/yelp-window.c:163
 msgid "Help Browser"
-msgstr "Súgóböngészõ"
+msgstr "SÃºgÃ³bÃ¶ngÃ©szÅ‘"
 
 #: src/yelp-window.c:418
 msgid "Help Browser for GNOME 2.0"
-msgstr "A GNOME 2.0 súgóböngészõje"
+msgstr "A GNOME 2.0 sÃºgÃ³bÃ¶ngÃ©szÅ‘je"
 
 #: src/yelp-window.c:442
 msgid "Go back in the history list"
-msgstr "Vissza az emlékezetlistában"
+msgstr "Vissza az emlÃ©kezetlistÃ¡ban"
 
 #: src/yelp-window.c:457
 msgid "Go forth in the history list"
-msgstr "Elõre az emlékezetlistában"
+msgstr "ElÅ‘re az emlÃ©kezetlistÃ¡ban"
 
 #: src/yelp-window.c:472
 msgid "Overview of contents"
-msgstr "Tartalom áttekintése"
+msgstr "Tartalom Ã¡ttekintÃ©se"
 
 #: src/yelp-window.c:483
 msgid "Search in the index"
-msgstr "Keresés a tárgymutatóban"
+msgstr "KeresÃ©s a tÃ¡rgymutatÃ³ban"
 
 #: src/yelp-window.c:495
 msgid "Search for a phrase in the document"
-msgstr "Keresés egy a dokumentumban elõforduló kifejezésre"
+msgstr "KeresÃ©s egy a dokumentumban elÅ‘fordulÃ³ kifejezÃ©sre"
 
 #: src/yelp-window.c:501
 msgid "Help on "
-msgstr "Súgó errõl: "
+msgstr "SÃºgÃ³ errÅ‘l: "
 
 #: src/yelp-window.c:506
 msgid "Enter phrase to search for in all documents"
-msgstr "Írd be az összes dokumentumban keresendõ kifejezést"
+msgstr "Ãrd be az Ã¶sszes dokumentumban keresendÅ‘ kifejezÃ©st"
 
 #: yelp.desktop.in.h:1
 msgid "GNOME Helpbrowser"
-msgstr "GNOME súgóböngészõ"
+msgstr "GNOME sÃºgÃ³bÃ¶ngÃ©szÅ‘"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
-msgstr "Súgó"
+msgstr "SÃºgÃ³"
