--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-29  Seth Nickell  <snickell@stanford.edu>
+
+	* yelp.desktop.in:
+
+	Tweak comment.
+
 2002-01-27  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-content.c: added title-changed signal. Shouldn't
