translate strings from item factory.
2002-01-30  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c (yw_populate): translate strings from item
	  factory.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-30  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-window.c (yw_populate): translate strings from item
+	  factory.
+
 	* src/yelp-view-toc.c 
 	(yelp_view_toc_start): marked strings for translation.
 	(yelp_view_toc_start): same.
