--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-30  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added missing file.
+	* sv.po: Updated Swedish translation.
+
 2002-01-29  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
