--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2002-01-30  Mikael Hallendal  <micke@codefactory.se>
 
+	* Release 0.2
+
+	* src/yelp-view-toc.c (yelp_view_toc_write_header): added encoding
+	  utf-8 to html header.
+
+	* README: updated
+
+	* configure.in: bumped version.
+	
 	* src/yelp-util.c: removed debug printouts.
 
 	* src/yelp-html.c: hide debug printouts.
@@ -66,7 +75,7 @@
 	  YelpWindow.
 	
 	* src/yelp-util.[ch] (yelp_util_find_node_from_uri): added
-	  unimpl. 
+	  unimpl.
 
 	* src/yelp-marshal.list: added VOID:STRING
 
