--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-30  Mikael Hallendal  <micke@codefactory.se>
 
+	* configure.in: bumped version to 0.2.99
+
 	* Release 0.2
 
 	* src/yelp-view-toc.c (yelp_view_toc_write_header): added encoding
