--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-30  Zbigniew Chyla  <cyba@gnome.pl
+
+	* configure.in (ALL_LINGUAS): Added pl (Polish).
+
 2002-01-30  Mikael Hallendal  <micke@codefactory.se>
 
 	* configure.in: bumped version to 0.2.99
