--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
+
+	* pl.po: Added Polish translation by
+	GNOME PL Team <translators@gnome.pl>.
+
 2002-01-30  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
