--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Updated Norwegian (bokmål) translation.
+	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* pl.po: Added Polish translation by
