--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-31  Roy-Magne Mo  <rmo@sunnmore.net>
+
+	* nn.po: Added Norwegian (nynorsk) translation.
+
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokmål) translation.
