Added nn to ALL_LINGUAS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-31  Roy-Magne Mo  <rmo@sunnmore.net>
+
+	* configure.in: Added nn to ALL_LINGUAS.
+
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl
 
 	* configure.in (ALL_LINGUAS): Added pl (Polish).
