Renname stuff to "gnome-help".
2002-01-31  Satan  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-help.desktop.in:
	* src/Makefile.am:
	* yelp.desktop.in:

	Renname stuff to "gnome-help".

	Because I'm a boring kind of guy.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2002-01-31  Satan  <snickell@stanford.edu>
+
+	* Makefile.am:
+	* gnome-help.desktop.in:
+	* src/Makefile.am:
+	* yelp.desktop.in:
+
+	Renname stuff to "gnome-help".
+
+	Because I'm a boring kind of guy.
+	
 2002-01-31  Roy-Magne Mo  <rmo@sunnmore.net>
 
 	* configure.in: Added nn to ALL_LINGUAS.
