--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-31  Seth Nickell  <snickell@stanford.edu>
+
+	reviewed by: <delete if not using a buddy>
+
+	* POTFILES.in:
+
 2002-01-31  Roy-Magne Mo  <rmo@sunnmore.net>
 
 	* nn.po: Added Norwegian (nynorsk) translation.
