--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-06  Alex Larsson  <alexl@redhat.com>
+
+	* src/yelp-util.c (yelp_util_extract_docpath_from_uri):
+	Correctly handle the case when gnome_vfs_uri_new() fails.
+
 2002-01-31  Satan  <snickell@stanford.edu>
 
 	* Makefile.am:
