--- a/po/pt.po
+++ b/po/pt.po
@@ -1,19 +1,19 @@
 # yelp's Portuguese Translation
 # Copyright (C) 2001 Free Software Foundation, Inc.
-# Duarte Loreto <happyguy_pt@hotmail.com>, 2001
+# Duarte Loreto <happyguy_pt@hotmail.com>, 2001, 2002
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: 2.0\n"
-"POT-Creation-Date: 2002-01-08 23:23+0000\n"
-"PO-Revision-Date: 2002-01-08 23:24+0000\n"
+"POT-Creation-Date: 2002-02-08 01:39+0000\n"
+"PO-Revision-Date: 2002-02-08 01:40+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <none@none.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/GNOME_Yelp.server.in.h:1 yelp.desktop.in.h:2
+#: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
 msgstr "Yelp"
 
@@ -21,17 +21,9 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Fábrica Yelp"
 
-#: src/yelp-html.c:367
-msgid ""
-"<html><head><title>This is Yelp, a help browser for GNOME 2.0</title></"
-"head><body bgcolor=\"white\"><h3>Welcome to Yelp!</h3>This is to be a help "
-"browser for GNOME 2.0 written by Mikael Hallendal.<br><br>Please read the "
-"README and TODO<br></body></html>"
-msgstr ""
-"<html><head><title>Este é o Yelp, um navegador da ajuda para o GNOME 2.0</"
-"title></head><body bgcolor=\"white\"><h3>Bem vindo ao Yelp!</h3>Este vai ser "
-"um navegador de ajuda para o GNOME 2.0 escrito pelo Mikael Hallendal."
-"<br><br>Por favor leia o LEIA-ME (README) e A-FAZER (TODO)<br></body></html>"
+#: src/yelp-info.c:96
+msgid "info"
+msgstr "info"
 
 #: src/yelp-main.c:77
 #, c-format
@@ -42,70 +34,198 @@ msgstr "Incapaz de activar o Yelp: '%s'"
 msgid "Could not open new window."
 msgstr "Incapaz de abrir janela."
 
-#: src/yelp-view-content.c:159 src/yelp-view-index.c:172
+#: src/yelp-man.c:269 src/yelp-man.c:290 src/yelp-man.c:326 src/yelp-man.c:358
+#: src/yelp-man.c:374 src/yelp-man.c:385
+msgid "X11"
+msgstr "X11"
+
+#: src/yelp-man.c:274 src/yelp-man.c:305 src/yelp-man.c:363 src/yelp-man.c:390
+msgid "OpenSSL"
+msgstr "OpenSSL"
+
+#: src/yelp-man.c:279
+msgid "Termcap"
+msgstr "Termcap"
+
+#: src/yelp-man.c:295
+msgid "Perl"
+msgstr "Perl"
+
+#: src/yelp-man.c:300
+msgid "Qt"
+msgstr "Qt"
+
+#: src/yelp-man.c:310
+msgid "TIFF"
+msgstr "TIFF"
+
+#: src/yelp-man.c:315
+msgid "PThreads"
+msgstr "PThreads"
+
+#: src/yelp-man.c:337
+msgid "System Calls"
+msgstr "Chamadas Sistema"
+
+#: src/yelp-man.c:342
+msgid "Library Functions"
+msgstr "Biblioteca Funções"
+
+#: src/yelp-man.c:347
+msgid "Kernel Routines"
+msgstr "Rotinas Kernel"
+
+#: src/yelp-man.c:402
+msgid "Applications"
+msgstr "Aplicações"
+
+#: src/yelp-man.c:407
+msgid "Development"
+msgstr "Desenvolvimento"
+
+#: src/yelp-man.c:412
+msgid "Hardware Devices"
+msgstr "Dispositivos de Equipamento"
+
+#: src/yelp-man.c:417
+msgid "Configuration Files"
+msgstr "Ficheiros de Configuração"
+
+#: src/yelp-man.c:422
+msgid "Games"
+msgstr "Jogos"
+
+#: src/yelp-man.c:427
+msgid "Overviews"
+msgstr "Resumos"
+
+#: src/yelp-man.c:432
+msgid "System Administration"
+msgstr "Administração de Sistema"
+
+#: src/yelp-man.c:443
+msgid "man"
+msgstr "man"
+
+#: src/yelp-view-content.c:207 src/yelp-view-index.c:175
 msgid "Section"
 msgstr "Secção"
 
-#: src/yelp-window.c:109
+#: src/yelp-view-toc.c:239
+msgid "Important documents"
+msgstr "Documentos importantes"
+
+#: src/yelp-view-toc.c:240
+msgid "Other document systems"
+msgstr "Outros sistemas documentação"
+
+#: src/yelp-view-toc.c:241
+msgid "Manual pages"
+msgstr "Páginas manual"
+
+#: src/yelp-view-toc.c:242 src/yelp-view-toc.c:495 src/yelp-view-toc.c:514
+msgid "Info pages"
+msgstr "Páginas info"
+
+#: src/yelp-view-toc.c:243
+msgid "Installed documents"
+msgstr "Documentos instalados"
+
+#: src/yelp-view-toc.c:253
+msgid "Start page"
+msgstr "Página inicial"
+
+#: src/yelp-view-toc.c:418
+msgid "Manual pages for section"
+msgstr "Páginas manual para secção"
+
+#: src/yelp-view-toc.c:448 src/yelp-view-toc.c:467
+msgid "Man page sections"
+msgstr "Secções páginas manual"
+
+#: src/yelp-view-toc.c:597
+msgid "Scrollkeeper docs for category"
+msgstr "Docs Scrollkeeper para categoria"
+
+#: src/yelp-window.c:111
 msgid "/_File"
 msgstr "/_Ficheiro"
 
-#: src/yelp-window.c:110
+#: src/yelp-window.c:112
 msgid "/File/_New window"
 msgstr "/Ficheiro/_Nova janela"
 
-#: src/yelp-window.c:111
+#: src/yelp-window.c:113
 msgid "/File/_Close window"
 msgstr "/Ficheiro/_Fechar janela"
 
-#: src/yelp-window.c:112
-msgid "/File/E_xit"
-msgstr "/Ficheiro/Sa_ir"
+#: src/yelp-window.c:114
+msgid "/File/_Quit"
+msgstr "/Ficheiro/_Sair"
 
-#: src/yelp-window.c:113
+#: src/yelp-window.c:115
 msgid "/_Help"
 msgstr "/_Ajuda"
 
-#: src/yelp-window.c:114
+#: src/yelp-window.c:116
 msgid "/Help/_About"
 msgstr "/Ajuda/_Sobre"
 
-#: src/yelp-window.c:161
+#: src/yelp-window.c:164
 msgid "Help Browser"
 msgstr "Navegador de Ajuda"
 
-#: src/yelp-window.c:376
+#: src/yelp-window.c:409
 msgid "Help Browser for GNOME 2.0"
 msgstr "Navegador de Ajuda para o GNOME 2.0"
 
-#: src/yelp-window.c:400
+#: src/yelp-window.c:433
 msgid "Go back in the history list"
 msgstr "Ir atrás na lista de histórico"
 
-#: src/yelp-window.c:415
+#: src/yelp-window.c:448
 msgid "Go forth in the history list"
 msgstr "Ir para a frente na lista de histórico"
 
-#: src/yelp-window.c:430
+#: src/yelp-window.c:463
 msgid "Overview of contents"
 msgstr "Resumo dos conteudos"
 
-#: src/yelp-window.c:441
+#: src/yelp-window.c:474
 msgid "Search in the index"
 msgstr "Procurar no índice"
 
-#: src/yelp-window.c:452
+#: src/yelp-window.c:486
 msgid "Search for a phrase in the document"
 msgstr "Procurar uma frase no documento"
 
-#: src/yelp-window.c:458
+#: src/yelp-window.c:492
 msgid "Help on "
 msgstr "Ajuda sobre "
 
-#: src/yelp-window.c:463
+#: src/yelp-window.c:497
 msgid "Enter phrase to search for in all documents"
 msgstr "Introduza uma frase a procurar em todos os documentos"
 
-#: yelp.desktop.in.h:1
-msgid "GNOME Helpbrowser"
-msgstr "Navegador de Ajuda GNOME"
+#: gnome-help.desktop.in.h:1
+msgid "Get help with GNOME"
+msgstr "Obter ajuda sobre o GNOME"
+
+#: gnome-help.desktop.in.h:2
+msgid "Help"
+msgstr "Ajuda"
+
+#~ msgid ""
+#~ "<html><head><title>This is Yelp, a help browser for GNOME 2.0</title></"
+#~ "head><body bgcolor=\"white\"><h3>Welcome to Yelp!</h3>This is to be a "
+#~ "help browser for GNOME 2.0 written by Mikael Hallendal.<br><br>Please "
+#~ "read the README and TODO<br></body></html>"
+#~ msgstr ""
+#~ "<html><head><title>Este é o Yelp, um navegador da ajuda para o GNOME 2.0</"
+#~ "title></head><body bgcolor=\"white\"><h3>Bem vindo ao Yelp!</h3>Este vai "
+#~ "ser um navegador de ajuda para o GNOME 2.0 escrito pelo Mikael Hallendal."
+#~ "<br><br>Por favor leia o LEIA-ME (README) e A-FAZER (TODO)<br></body></"
+#~ "html>"
+
+#~ msgid "GNOME Helpbrowser"
+#~ msgstr "Navegador de Ajuda GNOME"
