--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-10  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/*.c: cleaned up includes
+		
+	* src/yelp-util.c (yelp_util_extract_docpath_from_uri): remove
+	  warning.
+	
 	* src/yelp-window.c (yw_handle_url): show external URL's in
 	  external viewer. #67962
 
