--- a/po/no.po
+++ b/po/no.po
@@ -1,5 +1,5 @@
-# Norwegian (bokmål) translation of yelp.
-# Copyright © 2001-2002 Free Software Foundation, Inc.
+# Norwegian (bokmÃ¥l) translation of yelp.
+# Copyright Â© 2001-2002 Free Software Foundation, Inc.
 # Kjartan Maraas <kmaraas@gnome.org>, 2001-2002.
 # 
 msgid ""
@@ -10,7 +10,7 @@ msgstr ""
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norsk (bokml) <no@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: src/GNOME_Yelp.server.in.h:1
@@ -28,11 +28,11 @@ msgstr "info"
 #: src/yelp-main.c:77
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Kunne ikke aktivere Yelp: «%s»"
+msgstr "Kunne ikke aktivere Yelp: Â«%sÂ»"
 
 #: src/yelp-main.c:97
 msgid "Could not open new window."
-msgstr "Kunne ikke åpne nytt vindu."
+msgstr "Kunne ikke Ã¥pne nytt vindu."
 
 #: src/yelp-man.c:269 src/yelp-man.c:290 src/yelp-man.c:326 src/yelp-man.c:358
 #: src/yelp-man.c:374 src/yelp-man.c:385
@@ -181,11 +181,11 @@ msgstr "Hjelp leser for GNOME 2.0"
 
 #: src/yelp-window.c:433
 msgid "Go back in the history list"
-msgstr "Gå tilbake i historikken"
+msgstr "GÃ¥ tilbake i historikken"
 
 #: src/yelp-window.c:448
 msgid "Go forth in the history list"
-msgstr "Gå fremover i historikken"
+msgstr "GÃ¥ fremover i historikken"
 
 #: src/yelp-window.c:463
 msgid "Overview of contents"
@@ -193,11 +193,11 @@ msgstr "Innholdsoversikt"
 
 #: src/yelp-window.c:474
 msgid "Search in the index"
-msgstr "Søk i indeksen"
+msgstr "SÃ¸k i indeksen"
 
 #: src/yelp-window.c:486
 msgid "Search for a phrase in the document"
-msgstr "Søk etter en frase i dokumentet"
+msgstr "SÃ¸k etter en frase i dokumentet"
 
 #: src/yelp-window.c:492
 msgid "Help on "
@@ -205,11 +205,11 @@ msgstr "Hjelp om"
 
 #: src/yelp-window.c:497
 msgid "Enter phrase to search for in all documents"
-msgstr "Skriv inn frasen du vil søke etter i alle dokumenter"
+msgstr "Skriv inn frasen du vil sÃ¸ke etter i alle dokumenter"
 
 #: gnome-help.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "Få hjelp med GNOME"
+msgstr "FÃ¥ hjelp med GNOME"
 
 #: gnome-help.desktop.in.h:2
 msgid "Help"
