--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-02-13  Mikael Hallendal  <micke@codefactory.se>
 
+	* configure.in: release 0.2.1
+
+	* reverted binary name change.
+
 	* src/yelp-main.c (main): initiate url to empty string instead of
 	  NULL. Fixed #71350
 	
