--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-13  Mikael Hallendal  <micke@codefactory.se>
+
+	* POTFILES.in: change to yelp.desktop.in instead of gnome-help
+
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokmål) translation.
