*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 2002-02-13  Mikael Hallendal  <micke@codefactory.se>
-
+	
 	* configure.in: release 0.2.1
 
 	* reverted binary name change.
@@ -48,7 +48,7 @@
 
 	* configure.in: Added nn to ALL_LINGUAS.
 
-2002-01-30  Zbigniew Chyla  <cyba@gnome.pl
+2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
 	* configure.in (ALL_LINGUAS): Added pl (Polish).
 
