--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-13  Alex Larsson  <alexl@redhat.com>
+
+	* src/Makefile.am (install-local):
+	Install a gnome-help symlink
+
 2002-02-13  Mikael Hallendal  <micke@codefactory.se>
 	
 	* configure.in: release 0.2.1
