--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2002-02-13  Alex Larsson  <alexl@redhat.com>
 
 	* src/Makefile.am (install-local):
+	Remove old gnome-help binary, if any.
+	
+2002-02-13  Alex Larsson  <alexl@redhat.com>
+
+	* src/Makefile.am (install-local):
 	Install a gnome-help symlink
 
 2002-02-13  Mikael Hallendal  <micke@codefactory.se>
