--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-13  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2002-02-13  Mikael Hallendal  <micke@codefactory.se>
 
 	* POTFILES.in: change to yelp.desktop.in instead of gnome-help
