--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-17  Tõivo Leedjärv  <leedjarv@interest.ee>
+
+	* configure.in: Added et to ALL_LINGUAS.
+
 2002-02-13  jacob berkman  <jacob@ximian.com>
 
 	* src/Makefile.am (install-exec-local): rename install-local since
