--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-17  Tõivo Leedjärv  <leedjarv@interest.ee>
+
+	* et.po: Added Estonian translation.
+
 2002-02-16  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Updated Danish translation.
