--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-18  Zbigniew Chyla  <cyba@gnome.pl>
+
+	* pl.po: Updated Polish translation by
+	GNOME PL Team <translators@gnome.pl>.
+
 2002-02-17  Tõivo Leedjärv  <leedjarv@interest.ee>
 
 	* et.po: Added Estonian translation.
