--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-20  Simos Xenitellis  <simos@hellug.gr>
+
+	* configure.in: Added "el" to ALL_LINGUAS.
+
 2002-02-18  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-history.c (yelp_history_goto): don't add entry to
