--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-20  Simos Xenitellis  <simos@hellug.gr>
+
+	* el.po: Added Greek translation. 
+
 2002-02-20  Hasbullah Bin Pit <sebol@ikhlas.com>
 
 	* ms.po: Updated Malay Translation.
