--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-21  Fatih Demir <kabalak@gtranslator.org>
+
+	* tr.po: Committed updated Turkish translation by Görkem.
+
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
 	* el.po: Added Greek translation. 
