--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-22  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* src/yelp-main.c: Remove unsupported #ifdef ENABLE_NLS stuff.
+	
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
 	* configure.in: Added "el" to ALL_LINGUAS.
