Updated Polish translation by GNOME PL Team <translators@gnome.pl>

--- a/po/pl.po
+++ b/po/pl.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "POT-Creation-Date: 2002-02-18 19:48+0100\n"
-"PO-Revision-Date: 2002-02-18 19:45+0100\n"
+"PO-Revision-Date: 2002-02-25 22:48+0100\n"
 "Last-Translator: GNOME PL Team <translators@gnome.pl>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -101,7 +101,7 @@ msgstr "Gry"
 
 #: src/yelp-man.c:1
 msgid "Overviews"
-msgstr "Podsumowania"
+msgstr "Zestawienia"
 
 #: src/yelp-man.c:1
 msgid "System Administration"
@@ -185,7 +185,7 @@ msgstr "Przechodzi o pozycję naprzód na liście historii"
 
 #: src/yelp-window.c:1
 msgid "Overview of contents"
-msgstr "Podsumowanie zawartości"
+msgstr "Zestawienie zawartości"
 
 #: src/yelp-window.c:1
 msgid "Search in the index"
