--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-28  Kenneth Rohde Christiansen  <kenneth@gnu.org>
+
+	* da.po: Updated Danish translation
+
 2002-02-28  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
