--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-28  Tõivo Leedjärv  <leedjarv@interest.ee>
+
+	* et.po: Updated Estonian translation.
+
 2002-02-28  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Fixed Swedish translation.
