--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-02-28  Sandeep V Honde <sandeep.honde@wipro.com>
+
+	* src/yelp-main.c :
+	- Basic support for Session Management.
+	(yelp_save_session): added/impl.
+	(yelp_client_die)  : added/impl.  
+
 2002-02-28  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-index.c:
